# ODE-Master-Generator

./: Dockerfile  Makefile  Procfile  README.md  README_DEPLOYMENT.md  api_server.py  core_master_generators.py  deploy_to_railway.sh  docker-compose.yml  master_generators_app.py  pyproject.toml  railway.json  requirements.txt  rq_utils.py  start.sh  startup_check.py  supervisord.conf  tasks_train.py  unified_core_fixed.py  worker.py
kubernetes/: deployment.yaml
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: master-generators.json
nginx/: nginx.conf
rq_jobs/: reverse_jobs.py
scripts/: deploy.sh  launch.py  package_project.py  setup.py  test_installation.py
services/api/: Dockerfile  start-api.sh
services/ui/: Dockerfile  start-ui.sh
services/worker/: Dockerfile  start-worker.sh
shared/: inverse_core.py  ode_core.py  phi_lib.py  phi_library.py  reverse_engineering.py  reverse_fit.py  series_tools.py  training_registry.py
src/: __init__.py  cli.py
src/api/: __init__.py  routes.py
src/database/: models.py
src/dl/: __init__.py  novelty_detector.py
src/functions/: __init__.py  basic_functions.py  phi_library.py  special_functions.py
src/generators/: __init__.py  generator_constructor.py  linear_generators.py  master_generator.py  master_theorem.py  nonlinear_generators.py  ode_classifier.py
src/ml/: __init__.py  generator_learner.py  pattern_learner.py  trainer.py
src/ui/: __init__.py  components.py  main_app.py
src/utils/: __init__.py  cache.py  config.py  logging_config.py  tasks.py  validators.py
static/: index.html
tests/: conftest.py  test_generators.py  test_generators_improved.py  test_integration.py  test_integration_improved.py  test_performance.py
